# weather-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep
flows/: weather_flow.py
src/: __init__.py
src/config/: cities.py  settings.py
src/extract/: weather_api.py
src/lineage/: tracker.py
src/load/: loader.py
src/models/: database.py
src/monitoring/: alerts.py
src/transform/: aggregations.py  anomaly.py  trends.py  validators.py
src/utils/: logger.py
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py  test_validators.py
